# travel_planner

./: GOOGLE_MAPS_FIX.md  README.md  USAGE.md  USAGE_EN.md  pyproject.toml
src/travel_planner/: crew.py  main.py  test_demo.py  test_maps_urls.py  test_new_features.py  travel_plan.md  travel_plan_Tainan_Taiwan.html  travel_plan_Taipei_Taiwan.html  travel_plan_Tokyo_Japan.html
src/travel_planner/config/: agents.yaml  tasks.yaml
src/travel_planner/tools/: __init__.py  custom_tool.py  html_generator.py  search_tool.py  travel_tools.py
tests/: travel_plan.md  travel_plan_Taipei_Taiwan.html  travel_plan_Tokyo_Japan.html
